[workspace]
resolver = "2"
members = ["crates/rsspec"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Nexode-Consulting/rsspec"
keywords = ["BDD", "testing", "spec", "ginkgo", "rspec"]
categories = ["development-tools::testing"]
