[package]
name = "rsspec"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "A Ginkgo/RSpec-inspired BDD testing framework for Rust."

[features]
default = ["macros"]
macros = ["dep:rsspec_macros"]
googletest = ["dep:googletest"]

[dependencies]
rsspec_macros = { path = "../rsspec_macros", version = "0.1.0", optional = true }
googletest = { version = "0.14", optional = true }

[dev-dependencies]
rsspec_macros = { path = "../rsspec_macros", version = "0.1.0" }

[[test]]
name = "bdd_runner_test"
harness = false
