[package]
name = "rsspec"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "A Ginkgo/RSpec-inspired BDD testing framework for Rust."

[features]
default = []
googletest = ["dep:googletest"]
tokio = ["dep:tokio"]

[dependencies]
googletest = { version = "0.14", optional = true }
tokio = { version = "1", features = ["rt"], optional = true }

[[test]]
name = "closure_api_test"
harness = false

[[test]]
name = "async_test"
harness = false
required-features = ["tokio"]
