[package]
name = "rsspec_macros"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Proc macros for the rsspec BDD testing framework."

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
